--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <!-- header -->
 <div>
     <h1>Calculator!</h1>
-    <h2>Вводите данные в поисковую строку следующим образом: /operation_name?first=fValue&sec=sValue</h2>
+    <h2>Вводите данные в поисковую строку следующим образом: http://localhost:8080//operation_name?first=fValue&sec=sValue</h2>
     <h2>Используйте:</h2>
     <h2>/sum для сложения</h2>
     <h2>/sub для вычитания</h2>
